# dyn-fmt

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
ensure_no_std/: Cargo.toml  build_release  run_release
ensure_no_std/src/: main.rs
src/: lib.rs
test-no_std/: Cargo.toml
test-no_std/src/: lib.rs
